Coppée - Poèmes modernes

--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -8,7 +8,7 @@
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:site" content="@LivresEfele"/>
-<meta name="twitter:title" content="Œuvres complètes de François Coppée, édition Lemerre""/>
+<meta name="twitter:title" content="Œuvres complètes de François Coppée, édition Lemerre"/>
 <meta name="twitter:description" content="epub kindle daisy"/>
 <meta name="twitter:image" content="http://efele.net/ebooks/livres/c00018/thumbnail-tw.png"/>
 <meta name="twitter:url" content="."/>
@@ -49,6 +49,7 @@
 <p><a href="../000526/index.html">Le reliquaire</a></p>
 <p><a href="../000531/index.html">Poèmes divers</a></p>
 <p><a href="../000535/index.html">Intimités</a></p>
+<p><a href="../000538/index.html">Poèmes modernes</a></p>
 <p><a href="../000527/index.html">Les humbles</a></p>
 <p><a href="../000528/index.html">Arrière-saison</a></p>
 <p><a href="../000529/index.html">Dans la prière et dans la lutte</a></p>
