Coppée - Le Critique en vacances

--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -61,6 +61,7 @@
 <p><a href="../000532/index.html">Une idylle pendant le siège</a></p>
 <p><a href="../000533/index.html">Contes en prose</a></p>
 <p><a href="../000537/index.html">Vingt contes nouveaux</a></p>
+<p><a href="../000539/index.html">Le Critique en vacances</a></p>
 <p><a href="../000536/index.html">Gustave Flaubert déclamateur</a></p>
 
 </body>
