Coppée - Le cahier rouge

--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -51,6 +51,7 @@
 <p><a href="../000535/index.html">Intimités</a></p>
 <p><a href="../000538/index.html">Poèmes modernes</a></p>
 <p><a href="../000527/index.html">Les humbles</a></p>
+<p><a href="../000540/index.html">Le cahier rouge</a></p>
 <p><a href="../000528/index.html">Arrière-saison</a></p>
 <p><a href="../000529/index.html">Dans la prière et dans la lutte</a></p>
 <p><a href="../000530/index.html">De pièces et de morceaux</a></p>
