--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -64,6 +64,7 @@
 <p><a href="../000537/index.html">Vingt contes nouveaux</a></p>
 <p><a href="../000539/index.html">Le Critique en vacances</a></p>
 <p><a href="../000536/index.html">Gustave Flaubert déclamateur</a></p>
+<p><a href="../000541/index.html">Contes rapides</a></p>
 
 </body>
 </html>
