Bernard - Le taxi fantôme

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -208,6 +208,19 @@
 </tr>
 
 <tr>
+<td class='auteur' rowspan="3" valign="top">Bernard, Tristan</td>
+<td class='livre'><a href='livres/000544/index.html'>Citoyens, animaux, phénomènes</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000545/index.html'>Le taxi fantôme</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000543/index.html'>Les Coteaux du Médoc</a></td>
+</tr>
+
+<tr>
 <td class='auteur' rowspan="2" valign="top">Bloy, Léon</td>
 <td class='livre'><a href='livres/000207/index.html'>Exégèse des Lieux Communs</a></td>
 </tr>
@@ -887,7 +900,7 @@
 
 <p>Cela dit, les éditions originales ont parfois des défauts. Cela va des   fautes d'impression (par exemple quand une lettre a sauté dans la   presse), aux fautes de composition (quand le typographe a pris la   mauvaise lettre), aux fautes d'orthographe de l'auteur, aux choix   idiosyncratiques des auteurs. Bien sûr, la limite entres toutes ces catégories n'est pas absolue, ou   du moins, il y beaucoup de cas où nous ne pouvons pas déterminer la   nature d’une erreur apparente (il faudrait demander à l'auteur). La ligne de conduite est la suivante : les fautes d’impression, quand elles peuvent être clairement identifiées en tant que telles, sont corrigées sans marquage ; les fautes de composition et d’orthographe, quand elles choquent à la lecture, sont corrigées avec marquage ; les orthographes d’époque ou idiosyncratiques ne sont pas corrigées ; la modernisation est proscrite (mais voir ci-dessous pour une exception).</p>
 
-<p>Ce respect n’empêche pas d’enrichir les fichier source, tant que les enrichissements peuvent être distingués de ce qui est original.  Par exemple, dans Montesquieu, la graphie « oi » qui est devenue « ai » en français moderne est marquée par les éléments &lt;OA/&gt; et &lt;oa/&gt;. Les tirages ÉFÉLÉ réalisent ces élements par « AI » et « ai », sans marque particulière, parce que cela permet un lecture plus fluide ; libre à chacun de produire des tirages différents.</p>
+<p>Ce respect n’empêche pas d’enrichir les fichiers source, tant que les enrichissements peuvent être distingués de ce qui est original.  Par exemple, dans Montesquieu, la graphie « oi » qui est devenue « ai » en français moderne est marquée par les éléments &lt;OA/&gt; et &lt;oa/&gt;. Les tirages ÉFÉLÉ réalisent ces élements par « AI » et « ai », sans marque particulière, parce que cela permet un lecture plus fluide ; libre à chacun de produire des tirages différents.</p>
 
 <h3><a name="fichier_source">Fichier source</a></h3>
 
