Régnier - La pécheresse

--- a/livres.publies/regnier/oeuvres/index.html
+++ b/livres.publies/regnier/oeuvres/index.html
@@ -164,6 +164,11 @@
     <td>L’entrevue — Le pavillon fermé — Marceline ou la punition fantastique</td>
   </tr>
 
+
+  <tr style="vertical-align:top;">
+    <td colspan='2'><a href="../000546/index.html">La pécheresse</a></td>
+  </tr>
+
   <tr style="vertical-align:top;">
     <td colspan='2'><a href="../000436/index.html">Les bonheurs perdus</a></td>
   </tr>
