Coppée - Longues et brèves- Henriette

--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -66,6 +66,8 @@
 <p><a href="../000539/index.html">Le Critique en vacances</a></p>
 <p><a href="../000536/index.html">Gustave Flaubert déclamateur</a></p>
 <p><a href="../000541/index.html">Contes rapides</a></p>
+<p><a href="../000548/index.html">Henriette</a></p>
+<p><a href="../000547/index.html">Longues et brèves</a></p>
 
 </body>
 </html>
