--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -57,6 +57,8 @@
 <p><a href="../000529/index.html">Dans la prière et dans la lutte</a></p>
 <p><a href="../000530/index.html">De pièces et de morceaux</a></p>
 <p><a href="../000534/index.html">Les paroles sincères</a></p>
+<p><a href="../000550/index.html">Des vers français</a></p>
+<p><a href="../000551/index.html">Une lettre de Christmas</a></p>
 
 <h3>Prose</h3>
 
@@ -67,6 +69,7 @@
 <p><a href="../000536/index.html">Gustave Flaubert déclamateur</a></p>
 <p><a href="../000541/index.html">Contes rapides</a></p>
 <p><a href="../000548/index.html">Henriette</a></p>
+<p><a href="../000549/index.html">Les vrais riches</a></p>
 <p><a href="../000547/index.html">Longues et brèves</a></p>
 
 </body>
