--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -519,7 +519,7 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top' rowspan='4'>Mac-Orlan, Pierre</td>
+<td class='auteur' valign='top' rowspan='5'>Mac-Orlan, Pierre</td>
 <td class='livre'><a href='livres/000525/index.html'>A bord de l’Étoile Matutine</a> *</td>
 </tr>
 
@@ -533,6 +533,10 @@
 
 <tr>
 <td class='livre'><a href='livres/000518/index.html'>Petit manuel du parfait aventurier</a> *</td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000552/index.html'>La bête conquérante</a> *</td>
 </tr>
 
 <tr>
