Coppée - Olivier - Le devoir des jeunes

--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -52,6 +52,7 @@
 <p><a href="../000538/index.html">Poèmes modernes</a></p>
 <p><a href="../000527/index.html">Les humbles</a></p>
 <p><a href="../000540/index.html">Le cahier rouge</a></p>
+<p><a href="../000553/index.html">Olivier</a></p>
 <p><a href="../000528/index.html">Arrière-saison</a></p>
 <p><a href="../000542/index.html">Les feuilles volantes</a></p>
 <p><a href="../000529/index.html">Dans la prière et dans la lutte</a></p>
@@ -71,6 +72,7 @@
 <p><a href="../000548/index.html">Henriette</a></p>
 <p><a href="../000549/index.html">Les vrais riches</a></p>
 <p><a href="../000547/index.html">Longues et brèves</a></p>
+<p><a href="../000554/index.html">Le devoir des jeunes</a></p>
 
 </body>
 </html>
