Coppée - Paris ; La liberté de l’enseignement

--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -73,7 +73,9 @@
 <p><a href="../000549/index.html">Les vrais riches</a></p>
 <p><a href="../000547/index.html">Longues et brèves</a></p>
 <p><a href="../000555/index.html">Le coupable</a></p>
+<p><a href="../000556/index.html">Paris</a></p>
 <p><a href="../000554/index.html">Le devoir des jeunes</a></p>
+<p><a href="../000557/index.html">La liberté de l’enseignement</a></p>
 
 </body>
 </html>
