--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -70,6 +70,7 @@
 <p><a href="../000536/index.html">Gustave Flaubert déclamateur</a></p>
 <p><a href="../000541/index.html">Contes rapides</a></p>
 <p><a href="../000548/index.html">Henriette</a></p>
+<p><a href="../000558/index.html">Toute une jeunesse</a></p>
 <p><a href="../000549/index.html">Les vrais riches</a></p>
 <p><a href="../000547/index.html">Longues et brèves</a></p>
 <p><a href="../000555/index.html">Le coupable</a></p>
