Coppée - Les récits et les élégies

--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -52,6 +52,7 @@
 <p><a href="../000538/index.html">Poèmes modernes</a></p>
 <p><a href="../000527/index.html">Les humbles</a></p>
 <p><a href="../000540/index.html">Le cahier rouge</a></p>
+<p><a href="../000559/index.html">Les récits et les élégies</a></p>
 <p><a href="../000553/index.html">Olivier</a></p>
 <p><a href="../000528/index.html">Arrière-saison</a></p>
 <p><a href="../000542/index.html">Les feuilles volantes</a></p>
