Coppée - Mon franc parler / La bonne souffrance / Contes pour les jours de fête

--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -74,8 +74,11 @@
 <p><a href="../000558/index.html">Toute une jeunesse</a></p>
 <p><a href="../000549/index.html">Les vrais riches</a></p>
 <p><a href="../000547/index.html">Longues et brèves</a></p>
+<p><a href="../000560/index.html">Mon franc parler</a></p>
 <p><a href="../000555/index.html">Le coupable</a></p>
 <p><a href="../000556/index.html">Paris</a></p>
+<p><a href="../000561/index.html">La bonne souffrance</a></p>
+<p><a href="../000562/index.html">Contes pour les jours de fête</a></p>
 <p><a href="../000554/index.html">Le devoir des jeunes</a></p>
 <p><a href="../000557/index.html">La liberté de l’enseignement</a></p>
 
