Nau - Lettres de Corse et de Bretagne

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -608,8 +608,12 @@
 </tr>
 
 <tr>
-<td class='auteur'>Nau, John-Antoine</td>
+<td class='auteur' rowspan="2">Nau, John-Antoine</td>
 <td class='livre'><a href='livres/000156/index.html'>Force ennemie</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000563/index.html'>Lettres de Corse et de Bretagne</a></td>
 </tr>
 
 <tr>
