Mac Orlan - La cavalière Elsa

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -519,8 +519,12 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top' rowspan='5'>Mac-Orlan, Pierre</td>
+<td class='auteur' valign='top' rowspan='6'>Mac-Orlan, Pierre</td>
 <td class='livre'><a href='livres/000525/index.html'>A bord de l’Étoile Matutine</a> *</td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000565/index.html'>La cavalière Elsa</a> *</td>
 </tr>
 
 <tr>
