Mac Orlan - La fin

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -519,29 +519,32 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top' rowspan='6'>Mac-Orlan, Pierre</td>
+<td class='auteur' valign='top' rowspan='7'>Mac-Orlan, Pierre</td>
 <td class='livre'><a href='livres/000525/index.html'>A bord de l’Étoile Matutine</a> *</td>
 </tr>
 
+<tr>
+<td class='livre'><a href='livres/000552/index.html'>La bête conquérante</a> *</td>
+</tr>
 <tr>
 <td class='livre'><a href='livres/000565/index.html'>La cavalière Elsa</a> *</td>
 </tr>
 
 <tr>
+<td class='livre'><a href='livres/000002/index.html'>Le chant de l’équipage</a> *</td>
+</tr>
+<tr>
 <td class='livre'><a href='livres/000523/index.html'>La chronique des temps désespérés</a> *</td>
 </tr>
 
 <tr>
-<td class='livre'><a href='livres/000002/index.html'>Le chant de l’équipage</a> *</td>
+<td class='livre'><a href='livres/000565/index.html'>La fin</a> *</td>
 </tr>
 
 <tr>
 <td class='livre'><a href='livres/000518/index.html'>Petit manuel du parfait aventurier</a> *</td>
 </tr>
 
-<tr>
-<td class='livre'><a href='livres/000552/index.html'>La bête conquérante</a> *</td>
-</tr>
 
 <tr>
 <td class='auteur' valign="top" rowspan="2">Marinetti, Filippo Tommaso</td>
