index, etc et Spectral pour le site

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -6,6 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>ÉFÉLÉ, réimprimeur la nuit</title>
 <link rel="stylesheet" type="text/css" href="style.css"/>
+
 </head>
 
 <body>
@@ -254,7 +255,7 @@
 </tr>
 
 <tr>
-<td class='auteur' valign="top" rowspan='11'>Chamfort, Sébastien-Roch-Nicolas de</td>
+<td class='auteur' valign="top" rowspan='20'>Chamfort, Sébastien-Roch-Nicolas de</td>
 <td class='livre'><a href='livres/000450/index.html'>Avant-propos</a></td>
 </tr>
 
@@ -297,6 +298,43 @@
 <tr>
 <td class='livre'><a href='livres/000460/index.html'>Théâtre</a></td>
 </tr>
+
+<tr>
+<td class='livre'><a href='livres/000569/index.html'>Discours sur l’influence des grands écrivains</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000570/index.html'>Des académies</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000571/index.html'>Dissertation sur l’imitation de la nature</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000572/index.html'>Dialogue entre S<sup>t</sup>-Réal, Sénèque, Julien et Louis-le-Grand</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000573/index.html'>Question</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000574/index.html'>Petits dialogues philosophiques</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000575/index.html'>Question — Réponse</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000576/index.html'>Observations sur la proclamation des lieutenans, gouverneurs et capitaines généraux des Pays-Bas, en 1792</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000577/index.html'>Avis</a></td>
+</tr>
+
 
 <tr>
 <td class='auteur'>Champsaur, Félicien</td>
@@ -779,6 +817,15 @@
 
 <tr>
 <td class='livre'><a href='livres/000374/index.html'>Nouvelles impressions d’Afrique</a></td>
+</tr>
+
+<tr>
+<td class='auteur' rowspan='2'>Samain, Albert</td>
+<td class='livre'><a href='livres/000567/index.html'>Aux flancs de vase</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000568/index.html'>Contes</a></td>
 </tr>
 
 <tr>
