Elbel — Pour une paix véritable

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -407,6 +407,11 @@
 </tr>
 
 <tr>
+<td class='auteur'>Elbel, Paul</td>
+<td class='livre'><a href='livres/000578/index.html'>Pour une paix véritable</a></td>
+</tr>
+
+<tr>
 <td class='auteur'>Elder, Marc</td>
 <td class='livre'><a href='livres/000130/index.html'>Le Peuple de la Mer</a></td>
 </tr>
