--- a/livres.publies/regnier/oeuvres/index.html
+++ b/livres.publies/regnier/oeuvres/index.html
@@ -212,6 +212,10 @@
   <tr style="vertical-align:top;">
     <td colspan='2'><a href="../000468/index.html">Proses datées</a></td>
   </tr>
+
+  <tr style="vertical-align:top;">
+    <td colspan='2'><a href="../000579/index.html">Vues</a></td>
+  </tr>
 </table>
 
 <h2>Théâtre</h2>
