Samain — Au jardin de l’infante

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -255,7 +255,7 @@
 </tr>
 
 <tr>
-<td class='auteur' valign="top" rowspan='20'>Chamfort, Sébastien-Roch-Nicolas de</td>
+<td class='auteur' valign="top" rowspan='21'>Chamfort, Sébastien-Roch-Nicolas de</td>
 <td class='livre'><a href='livres/000450/index.html'>Avant-propos</a></td>
 </tr>
 
@@ -333,6 +333,10 @@
 
 <tr>
 <td class='livre'><a href='livres/000577/index.html'>Avis</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000580/index.html'>Deux articles</a></td>
 </tr>
 
 
@@ -825,7 +829,11 @@
 </tr>
 
 <tr>
-<td class='auteur' rowspan='2'>Samain, Albert</td>
+<td class='auteur' rowspan='3'>Samain, Albert</td>
+<td class='livre'><a href='livres/000581/index.html'>Au jardin de l’infante</a></td>
+</tr>
+
+<tr>
 <td class='livre'><a href='livres/000567/index.html'>Aux flancs de vase</a></td>
 </tr>
 
