--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -255,90 +255,9 @@
 </tr>
 
 <tr>
-<td class='auteur' valign="top" rowspan='21'>Chamfort, Sébastien-Roch-Nicolas de</td>
-<td class='livre'><a href='livres/000450/index.html'>Avant-propos</a></td>
+<td class='auteur' valign="top">Chamfort, Sébastien-Roch-Nicolas de</td>
+<td class='livre'><a href='livres/c00020/index.html'>Œuvres complètes, édition P. R. Auguis </a></td>
 </tr>
-
-<tr>
-<td class='livre'><a href='livres/000445/index.html'>Notice historique sur la vie et les écrits de Chamfort</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000446/index.html'>Éloge de Molière</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000447/index.html'>Éloge de La Fontaine</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000456/index.html'>Discours de réception de Chamfort à l’académie française</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000449/index.html'>Maximes et pensées</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000459/index.html'>Mélanges de littérature</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000451/index.html'>Précis historique des révolutions de Naples et de Sicile</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000452/index.html'>Caractères et anecdotes</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000453/index.html'>Tableaux historiques de la Révolution française</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000460/index.html'>Théâtre</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000569/index.html'>Discours sur l’influence des grands écrivains</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000570/index.html'>Des académies</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000571/index.html'>Dissertation sur l’imitation de la nature</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000572/index.html'>Dialogue entre S<sup>t</sup>-Réal, Sénèque, Julien et Louis-le-Grand</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000573/index.html'>Question</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000574/index.html'>Petits dialogues philosophiques</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000575/index.html'>Question — Réponse</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000576/index.html'>Observations sur la proclamation des lieutenans, gouverneurs et capitaines généraux des Pays-Bas, en 1792</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000577/index.html'>Avis</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000580/index.html'>Deux articles</a></td>
-</tr>
-
 
 <tr>
 <td class='auteur'>Champsaur, Félicien</td>
@@ -829,7 +748,7 @@
 </tr>
 
 <tr>
-<td class='auteur' rowspan='3'>Samain, Albert</td>
+<td class='auteur' rowspan='3' valign='top'>Samain, Albert</td>
 <td class='livre'><a href='livres/000581/index.html'>Au jardin de l’infante</a></td>
 </tr>
 
