nom des fichiers de collection
foo.epub.zip, sur macos fait des choses bizarres.

--- a/livres.publies/balzac/la_comedie_humaine/index.html
+++ b/livres.publies/balzac/la_comedie_humaine/index.html
@@ -34,12 +34,12 @@
 </tr></table>
 
 <p>Archive de tous les volumes :
-    <a href="la_comedie_humaine.epub.zip">epub</a> 
-    <a href="la_comedie_humaine.mobi.zip">kindle</a>
-    <a href="la_comedie_humaine.daisy.zip.zip">daisy</a> 
+    <a href="la_comedie_humaine_epub.zip">epub</a> 
+    <a href="la_comedie_humaine_mobi.zip">kindle</a>
+    <a href="la_comedie_humaine_daisy.zip.zip">daisy</a> 
 </p>
 
-<p><a href="la_comedie_humaine.sources.zip">Source XML</a></p></div>
+<p><a href="la_comedie_humaine_sources.zip">Source XML</a></p></div>
 
 
 
