--- a/livres.publies/barbara/mes_petites_maisons/index.html
+++ b/livres.publies/barbara/mes_petites_maisons/index.html
@@ -37,12 +37,12 @@
 </tr></table>
 
 <p>Archive de tous les volumes :
-    <a href="mes_petites_maisons.epub.zip">epub</a> 
-    <a href="mes_petites_maisons.mobi.zip">kindle</a>
-    <a href="mes_petites_maisons.daisy.zip.zip">daisy</a> 
+    <a href="mes_petites_maisons_epub.zip">epub</a> 
+    <a href="mes_petites_maisons_mobi.zip">kindle</a>
+    <a href="mes_petites_maisons_daisy.zip.zip">daisy</a> 
 </p>
 
-<p><a href="mes_petites_maisons.sources.zip">Source XML</a></p></div>
+<p><a href="mes_petites_maisons_sources.zip">Source XML</a></p></div>
 
 
 
