--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -36,12 +36,12 @@
 <p>Cette réimpression est en cours de réalisation</p>
 
 <p>Archive de tous les volumes :
-    <a href="coppee_oeuvres_completes_lemerre.epub.zip">epub</a> 
-    <a href="coppee_oeuvres_completes_lemerre.mobi.zip">kindle</a>
-    <a href="coppee_oeuvres_completes_lemerre.daisy.zip.zip">daisy</a> 
+    <a href="coppee_oeuvres_completes_lemerre_epub.zip">epub</a> 
+    <a href="coppee_oeuvres_completes_lemerre_mobi.zip">kindle</a>
+    <a href="coppee_oeuvres_completes_lemerre_daisy.zip.zip">daisy</a> 
 </p>
 
-<p><a href="coppee_oeuvres_completes_lemerre.sources.zip">Source XML</a></p></div>
+<p><a href="coppee_oeuvres_completes_lemerre_sources.zip">Source XML</a></p></div>
 
 
 <h3>Poésie</h3>
