--- a/livres.publies/hugo/choses_vues/index.html
+++ b/livres.publies/hugo/choses_vues/index.html
@@ -29,11 +29,11 @@
 
 
 <p>Archive de tous les volumes :
-    <a href="choses_vues.epub.zip">EPUB</a> 
-    <a href="choses_vues.mobi.zip">kindle</a>
-    <a href="choses_vues.daisy.zip.zip">Daisy</a></p>
+    <a href="choses_vues_epub.zip">EPUB</a> 
+    <a href="choses_vues_mobi.zip">kindle</a>
+    <a href="choses_vues_daisy.zip.zip">Daisy</a></p>
 
-<p><a href="choses_vues.sources.zip">Source XML</a></p></div>
+<p><a href="choses_vues_sources.zip">Source XML</a></p></div>
 
 <table border="0" cellpadding="2">
   <tr style="vertical-align:top;">
