--- a/livres.publies/hugo/hetzel_actes_et_paroles/index.html
+++ b/livres.publies/hugo/hetzel_actes_et_paroles/index.html
@@ -29,12 +29,12 @@
 <div style="margin:1em 0 0 1em;"><table><tr><td><img style="vertical-align:center; padding: 0 2em 0 2em; margin:0;" alt="couverture" src="thumbnail.png"></img></td><td><p style="font-size:1.2em; padding:0; margin:0;"><i>Victor Hugo</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">Œuvres complètes, Actes et paroles</p><p style="padding:0; margin:0;">Hetzel Quantin, Paris, 1880-1926</p></td></tr></table>
 
 <p>Archive de tous les volumes :
-    <a href="hugo_actes_et_paroles_hetzel.epub.zip">epub</a> 
-    <a href="hugo_actes_et_paroles_hetzel.mobi.zip">kindle</a>
-    <a href="hugo_actes_et_paroles_hetzel.daisy.zip.zip">daisy</a> 
+    <a href="hugo_actes_et_paroles_hetzel_epub.zip">epub</a> 
+    <a href="hugo_actes_et_paroles_hetzel_mobi.zip">kindle</a>
+    <a href="hugo_actes_et_paroles_hetzel_daisy.zip.zip">daisy</a> 
 </p>
 
-<p><a href="hugo_actes_et_paroles_hetzel.sources.zip">Source XML</a></p></div>
+<p><a href="hugo_actes_et_paroles_hetzel_sources.zip">Source XML</a></p></div>
 
 <table border="0" cellpadding="2">
   <tr style="vertical-align:top;">
