--- a/livres.publies/hugo/hetzel_romans/index.html
+++ b/livres.publies/hugo/hetzel_romans/index.html
@@ -29,12 +29,12 @@
 
 
 <p>Archive de tous les volumes :
-    <a href="hugo_romans_hetzel.epub.zip">epub</a> 
-    <a href="hugo_romans_hetzel.mobi.zip">kindle</a>
-    <a href="hugo_romans_hetzel.daisy.zip.zip">daisy</a> 
+    <a href="hugo_romans_hetzel_epub.zip">epub</a> 
+    <a href="hugo_romans_hetzel_mobi.zip">kindle</a>
+    <a href="hugo_romans_hetzel_daisy.zip.zip">daisy</a> 
 </p>
 
-<p><a href="hugo_romans_hetzel.sources.zip">Source XML</a></p></div>
+<p><a href="hugo_romans_hetzel_sources.zip">Source XML</a></p></div>
 
 <table border="0" cellpadding="2">
   <tr style="vertical-align:top;">
