--- a/livres.publies/loti/oeuvres_completes/index.html
+++ b/livres.publies/loti/oeuvres_completes/index.html
@@ -33,12 +33,12 @@
  
 
 <p>Archive de tous les volumes :
-    <a href="loti_calmann_levy.epub.zip">epub</a> 
-    <a href="loti_calmann_levy.mobi.zip">kindle</a>
-    <a href="loti_calmann_levy.daisy.zip.zip">daisy</a> 
+    <a href="loti_calmann_levy_epub.zip">epub</a> 
+    <a href="loti_calmann_levy_mobi.zip">kindle</a>
+    <a href="loti_calmann_levy_daisy.zip.zip">daisy</a> 
 </p>
 
-<p><a href="loti_calmann_levy.sources.zip">Source XML</a></p></div>
+<p><a href="loti_calmann_levy_sources.zip">Source XML</a></p></div>
 
 <table border="0" cellpadding="2">
   <tr style="vertical-align:top;">
