--- a/livres.publies/maupassant/conard/index.html
+++ b/livres.publies/maupassant/conard/index.html
@@ -29,12 +29,12 @@
 
 
 <p>Archive de tous les volumes :
-    <a href="maupassant_conard.epub.zip">epub</a> 
-    <a href="maupassant_conard.mobi.zip">kindle</a>
-    <a href="maupassant_conard.daisy.zip.zip">daisy</a> 
+    <a href="maupassant_conard_epub.zip">epub</a> 
+    <a href="maupassant_conard_mobi.zip">kindle</a>
+    <a href="maupassant_conard_daisy.zip.zip">daisy</a> 
 </p>
 
-<p><a href="maupassant_conard.sources.zip">Source XML</a></p></div>
+<p><a href="maupassant_conard_sources.zip">Source XML</a></p></div>
 
 <table border="0" cellpadding="2">
   <tr style="vertical-align:top;">
