--- a/livres.publies/moliere/oeuvres_completes/index.html
+++ b/livres.publies/moliere/oeuvres_completes/index.html
@@ -27,12 +27,12 @@
 <div style="margin:1em 0 0 1em;"><table><tr><td><img style="vertical-align:center; padding: 0 2em 0 2em; margin:0;" alt="couverture" src="thumbnail.png"></img></td><td><p style="font-size:1.2em; padding:0; margin:0;"><i>Molière</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">Œuvres complètes</p><p style="padding:0; margin:0;">Édition : Félix Lemaistre</p><p style="padding:0; margin:0;">Garnier Frères, Paris, 1915</p></td></tr></table>
 
 <p>Archive de tous les volumes :
-    <a href="moliere.epub.zip">epub</a> 
-    <a href="moliere.mobi.zip">kindle</a>
-    <a href="moliere.daisy.zip.zip">daisy</a> 
+    <a href="moliere_epub.zip">epub</a> 
+    <a href="moliere_mobi.zip">kindle</a>
+    <a href="moliere_daisy.zip.zip">daisy</a> 
 </p>
 
-<p><a href="moliere.sources.zip">Source XML</a></p></div>
+<p><a href="moliere_sources.zip">Source XML</a></p></div>
 
 <table border="0" cellpadding="2">
   <tr style="vertical-align:top;">
