--- a/livres.publies/regnier/oeuvres/index.html
+++ b/livres.publies/regnier/oeuvres/index.html
@@ -29,12 +29,12 @@
 
 
 <p>Archive de tous les volumes :
-    <a href="regnier.epub.zip">epub</a> 
-    <a href="regnier.mobi.zip">kindle</a>
-    <a href="reginer.daisy.zip.zip">daisy</a> 
+    <a href="regnier_epub.zip">epub</a> 
+    <a href="regnier_mobi.zip">kindle</a>
+    <a href="reginer_daisy.zip.zip">daisy</a> 
 </p>
 
-<p><a href="regnier.sources.zip">Source XML</a></p>
+<p><a href="regnier_sources.zip">Source XML</a></p>
 </div>
 
 <h2>Poésie</h2>
