--- a/livres.publies/rolland/l_ame_enchantee/index.html
+++ b/livres.publies/rolland/l_ame_enchantee/index.html
@@ -29,11 +29,11 @@
 
 
 <p>Archive de tous les volumes :
-    <a href="l_ame_enchantee.epub.zip">EPUB</a> 
-    <a href="l_ame_enchantee.mobi.zip">kindle</a>
-    <a href="l_ame_enchantee.daisy.zip.zip">Daisy</a></p>
+    <a href="l_ame_enchantee_epub.zip">EPUB</a> 
+    <a href="l_ame_enchantee_mobi.zip">kindle</a>
+    <a href="l_ame_enchantee_daisy.zip.zip">Daisy</a></p>
 
-<p><a href="l_ame_enchantee.sources.zip">Source XML</a></p></div>
+<p><a href="l_ame_enchantee_sources.zip">Source XML</a></p></div>
 
 <table border="0" cellpadding="2">
   <tr style="vertical-align:top;">
