--- a/livres.publies/stendhal/romans_et_nouvelles/index.html
+++ b/livres.publies/stendhal/romans_et_nouvelles/index.html
@@ -29,12 +29,12 @@
 
 
 <p>Archive de tous les volumes :
-    <a href="romans_et_nouvelles.font.zip">epub</a> 
-    <a href="romans_et_nouvelles.mobi.zip">kindle</a>
-    <a href="romans_et_nouvelles.daisy.zip.zip">daisy</a> 
+    <a href="romans_et_nouvelles_epub.zip">epub</a> 
+    <a href="romans_et_nouvelles_mobi.zip">kindle</a>
+    <a href="romans_et_nouvelles_daisy.zip.zip">daisy</a> 
 </p>
 
-<p><a href="romans_et_nouvelles.sources.zip">Source XML</a></p></div>
+<p><a href="romans_et_nouvelles_sources.zip">Source XML</a></p></div>
 
 <table border="0" cellpadding="2">
   <tr style='vertical-align: top;'>
