--- a/livres.publies/verlaine/oeuvres_completes/index.html
+++ b/livres.publies/verlaine/oeuvres_completes/index.html
@@ -33,12 +33,12 @@
 </tr></table>
 
 <p>Archive de tous les volumes :
-    <a href="verlaine_leon_vanier.epub.zip">epub</a> 
-    <a href="verlaine_leon_vanier.mobi.zip">kindle</a>
-    <a href="verlaine_leon_vanier.daisy.zip.zip">daisy</a> 
+    <a href="verlaine_leon_vanier_epub.zip">epub</a> 
+    <a href="verlaine_leon_vanier_mobi.zip">kindle</a>
+    <a href="verlaine_leon_vanier_daisy.zip.zip">daisy</a> 
 </p>
 
-<p><a href="verlaine_leon_vanier.sources.zip">Source XML</a></p></div>
+<p><a href="verlaine_leon_vanier_sources.zip">Source XML</a></p></div>
 
 
 
