--- a/livres.publies/verlaine/oeuvres_posthumes/index.html
+++ b/livres.publies/verlaine/oeuvres_posthumes/index.html
@@ -38,12 +38,12 @@
 
 
 <p>Archive de tous les volumes :
-    <a href="verlaine_albert_messein.epub.zip">epub</a> 
-    <a href="verlaine_albert_messein.mobi.zip">kindle</a>
-    <a href="verlaine_albert_messein.daisy.zip.zip">daisy</a> 
+    <a href="verlaine_albert_messein_epub.zip">epub</a> 
+    <a href="verlaine_albert_messein_mobi.zip">kindle</a>
+    <a href="verlaine_albert_messein_daisy.zip.zip">daisy</a> 
 </p>
 
-<p><a href="verlaine_albert_messein.sources.zip">Source XML</a></p></div>
+<p><a href="verlaine_albert_messein_sources.zip">Source XML</a></p></div>
 
 
 
