--- a/livres.publies/zola/les_rougon_macquart/index.html
+++ b/livres.publies/zola/les_rougon_macquart/index.html
@@ -33,12 +33,12 @@
 </tr></table>
 
 <p>Archive de tous les volumes :
-    <a href="les_rougon_macquart.epub.zip">epub</a> 
-    <a href="les_rougon_macquart.mobi.zip">kindle</a>
-    <a href="les_rougon_macquart.daisy.zip.zip">daisy</a> 
+    <a href="les_rougon_macquart_epub.zip">epub</a> 
+    <a href="les_rougon_macquart_mobi.zip">kindle</a>
+    <a href="les_rougon_macquart_daisy.zip.zip">daisy</a> 
 </p>
 
-<p><a href="les_rougon_macquart.sources.zip">Source XML</a></p></div>
+<p><a href="les_rougon_macquart_sources.zip">Source XML</a></p></div>
 
 
 
