--- a/livres.publies/barbara/histoires_emouvantes/index.html
+++ b/livres.publies/barbara/histoires_emouvantes/index.html
@@ -37,12 +37,12 @@
 </tr></table>
 
 <p>Archive de tous les volumes :
-    <a href="histoires_emouvantes.epub.zip">epub</a> 
-    <a href="histoires_emouvantes.mobi.zip">kindle</a>
-    <a href="histoires_emouvantes.daisy.zip.zip">daisy</a> 
+    <a href="histoires_emouvantes_epub.zip">epub</a> 
+    <a href="histoires_emouvantes_mobi.zip">kindle</a>
+    <a href="histoires_emouvantes_daisy.zip.zip">daisy</a> 
 </p>
 
-<p><a href="histoires_emouvantes.sources.zip">Source XML</a></p></div>
+<p><a href="histoires_emouvantes_sources.zip">Source XML</a></p></div>
 
 
 
