--- a/livres.publies/rolland/jean_christophe/index.html
+++ b/livres.publies/rolland/jean_christophe/index.html
@@ -27,12 +27,12 @@
 <div style="margin:1em 0 0 1em;"><table><tr><td><img style="vertical-align:center; padding: 0 2em 0 2em; margin:0;" alt="couverture" src="thumbnail.png"></img></td><td><p style="font-size:1.2em; padding:0; margin:0;"><i>Romain Rolland</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">Jean-Christophe</p><p style="padding:0; margin:0;">Ollendorf, Paris</p></td></tr></table>
 
 <p>Archive de tous les volumes :
-    <a href="jean-christophe.epub.zip">epub</a> 
-    <a href="jean-christophe.mobi.zip">kindle</a>
-    <a href="jean-christophe.daisy.zip.zip">daisy</a> 
+    <a href="jean-christophe_epub.zip">epub</a> 
+    <a href="jean-christophe_mobi.zip">kindle</a>
+    <a href="jean-christophe_daisy.zip.zip">daisy</a> 
 </p>
 
-<p><a href="jean-christophe.sources.zip">Source XML</a></p></div>
+<p><a href="jean-christophe_sources.zip">Source XML</a></p></div>
 
 <table border="0" cellpadding="2">
 <tr>
