--- a/livres.publies/chamfort/oeuvres_completes_auguis/index.html
+++ b/livres.publies/chamfort/oeuvres_completes_auguis/index.html
@@ -36,12 +36,12 @@
 <p>Cette réimpression est en cours de réalisation.</p>
 
 <p>Archive de tous les volumes :
-    <a href="chamfort_auguis.epub.zip">epub</a> 
-    <a href="chamfort_auguis.mobi.zip">kindle</a>
-    <a href="chamfort_auguis.daisy.zip.zip">daisy</a> 
+    <a href="chamfort_auguis_epub.zip">epub</a> 
+    <a href="chamfort_auguis_mobi.zip">kindle</a>
+    <a href="chamfort_auguis_daisy.zip.zip">daisy</a> 
 </p>
 
-<p><a href="chamfort_auguis.sources.zip">Source XML</a></p></div>
+<p><a href="chamfort_auguis_sources.zip">Source XML</a></p></div>
 
 <p><a href='../000450/index.html'>Avant-propos</a></p>
 <p><a href='../000445/index.html'>Notice historique sur la vie et les écrits de Chamfort</a></p>
