Chamfort — Lettres de Mirabeau à Chamfort

--- a/livres.publies/chamfort/oeuvres_completes_auguis/index.html
+++ b/livres.publies/chamfort/oeuvres_completes_auguis/index.html
@@ -65,6 +65,7 @@
 <p><a href='../000577/index.html'>Avis</a></p>
 <p><a href='../000582/index.html'>Épitres</a></p>
 <p><a href='../000580/index.html'>Deux articles</a></p>
+<p><a href='../000583/index.html'>Lettres de Mirabeau à Chamfort</a></p>
 
 
 </body>
