--- a/livres.publies/chamfort/oeuvres_completes_auguis/index.html
+++ b/livres.publies/chamfort/oeuvres_completes_auguis/index.html
@@ -64,6 +64,7 @@
 <p><a href='../000576/index.html'>Observations sur la proclamation des lieutenans, gouverneurs et capitaines généraux des Pays-Bas, en 1792</a></p>
 <p><a href='../000577/index.html'>Avis</a></p>
 <p><a href='../000582/index.html'>Épitres</a></p>
+<p><a href='../000584/index.html'>Lettres diverses</a></p>
 <p><a href='../000580/index.html'>Deux articles</a></p>
 <p><a href='../000583/index.html'>Lettres de Mirabeau à Chamfort</a></p>
 
