Samain - Le chariot d'or + collection

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -748,16 +748,8 @@
 </tr>
 
 <tr>
-<td class='auteur' rowspan='3' valign='top'>Samain, Albert</td>
-<td class='livre'><a href='livres/000581/index.html'>Au jardin de l’infante</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000567/index.html'>Aux flancs de vase</a></td>
-</tr>
-
-<tr>
-<td class='livre'><a href='livres/000568/index.html'>Contes</a></td>
+<td class='auteur' valign='top'>Samain, Albert</td>
+<td class='livre'><a href='livres/c00019/index.html'>Œuvres de Albert Samain</a></td>
 </tr>
 
 <tr>
