--- a/livres.publies/samain/oeuvres/index.html
+++ b/livres.publies/samain/oeuvres/index.html
@@ -47,6 +47,7 @@
 <p><a href='../000585/index.html'>Le chariot d’or</a></p>
 <p><a href='../000567/index.html'>Aux flancs de vase</a></p>
 <p><a href='../000568/index.html'>Contes</a></p>
+<p><a href='../000587/index.html'>Poèmes inachevés</a></p>
 
 </body>
 </html>
