Coppée — Le passant

--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -83,5 +83,9 @@ o<p><a href="../000564/index.html">Contes en vers et poésies diverses</a></p>
 <p><a href="../000554/index.html">Le devoir des jeunes</a></p>
 <p><a href="../000557/index.html">La liberté de l’enseignement</a></p>
 
+<h3>Théâtre</h3>
+
+<p><a href="../000590/index.html">Le passant</a></p>
+
 </body>
 </html>
