Coppée — Deux douleurs

--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -86,6 +86,7 @@ o<p><a href="../000564/index.html">Contes en vers et poésies diverses</a></p>
 <h3>Théâtre</h3>
 
 <p><a href="../000590/index.html">Le passant</a></p>
+<p><a href="../000591/index.html">Deux douleurs</a></p>
 
 </body>
 </html>
