Coppée — Fais ce que dois

--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -15,6 +15,10 @@
 
 <link rel="stylesheet" type="text/css" href="../../style.css"/>
 
+<style>
+.e { margin: 0; }
+</style>
+
 </head>
 
 <body>
@@ -46,47 +50,48 @@
 
 <h3>Poésie</h3>
 
-<p><a href="../000526/index.html">Le reliquaire</a></p>
-<p><a href="../000531/index.html">Poèmes divers</a></p>
-<p><a href="../000535/index.html">Intimités</a></p>
-<p><a href="../000538/index.html">Poèmes modernes</a></p>
-<p><a href="../000527/index.html">Les humbles</a></p>
-<p><a href="../000540/index.html">Le cahier rouge</a></p>
-<p><a href="../000559/index.html">Les récits et les élégies</a></p>
-o<p><a href="../000564/index.html">Contes en vers et poésies diverses</a></p>
-<p><a href="../000553/index.html">Olivier</a></p>
-<p><a href="../000528/index.html">Arrière-saison</a></p>
-<p><a href="../000542/index.html">Les feuilles volantes</a></p>
-<p><a href="../000529/index.html">Dans la prière et dans la lutte</a></p>
-<p><a href="../000530/index.html">De pièces et de morceaux</a></p>
-<p><a href="../000534/index.html">Les paroles sincères</a></p>
-<p><a href="../000550/index.html">Des vers français</a></p>
-<p><a href="../000551/index.html">Une lettre de Christmas</a></p>
+<p class='e'><a href="../000526/index.html">Le reliquaire</a></p>
+<p class='e'><a href="../000531/index.html">Poèmes divers</a></p>
+<p class='e'><a href="../000535/index.html">Intimités</a></p>
+<p class='e'><a href="../000538/index.html">Poèmes modernes</a></p>
+<p class='e'><a href="../000527/index.html">Les humbles</a></p>
+<p class='e'><a href="../000540/index.html">Le cahier rouge</a></p>
+<p class='e'><a href="../000559/index.html">Les récits et les élégies</a></p>
+<p class='e'><a href="../000564/index.html">Contes en vers et poésies diverses</a></p>
+<p class='e'><a href="../000553/index.html">Olivier</a></p>
+<p class='e'><a href="../000528/index.html">Arrière-saison</a></p>
+<p class='e'><a href="../000542/index.html">Les feuilles volantes</a></p>
+<p class='e'><a href="../000529/index.html">Dans la prière et dans la lutte</a></p>
+<p class='e'><a href="../000530/index.html">De pièces et de morceaux</a></p>
+<p class='e'><a href="../000534/index.html">Les paroles sincères</a></p>
+<p class='e'><a href="../000550/index.html">Des vers français</a></p>
+<p class='e'><a href="../000551/index.html">Une lettre de Christmas</a></p>
 
 <h3>Prose</h3>
 
-<p><a href="../000532/index.html">Une idylle pendant le siège</a></p>
-<p><a href="../000533/index.html">Contes en prose</a></p>
-<p><a href="../000537/index.html">Vingt contes nouveaux</a></p>
-<p><a href="../000539/index.html">Le Critique en vacances</a></p>
-<p><a href="../000536/index.html">Gustave Flaubert déclamateur</a></p>
-<p><a href="../000541/index.html">Contes rapides</a></p>
-<p><a href="../000548/index.html">Henriette</a></p>
-<p><a href="../000558/index.html">Toute une jeunesse</a></p>
-<p><a href="../000549/index.html">Les vrais riches</a></p>
-<p><a href="../000547/index.html">Longues et brèves</a></p>
-<p><a href="../000560/index.html">Mon franc parler</a></p>
-<p><a href="../000555/index.html">Le coupable</a></p>
-<p><a href="../000556/index.html">Paris</a></p>
-<p><a href="../000561/index.html">La bonne souffrance</a></p>
-<p><a href="../000562/index.html">Contes pour les jours de fête</a></p>
-<p><a href="../000554/index.html">Le devoir des jeunes</a></p>
-<p><a href="../000557/index.html">La liberté de l’enseignement</a></p>
+<p class='e'><a href="../000532/index.html">Une idylle pendant le siège</a></p>
+<p class='e'><a href="../000533/index.html">Contes en prose</a></p>
+<p class='e'><a href="../000537/index.html">Vingt contes nouveaux</a></p>
+<p class='e'><a href="../000539/index.html">Le Critique en vacances</a></p>
+<p class='e'><a href="../000536/index.html">Gustave Flaubert déclamateur</a></p>
+<p class='e'><a href="../000541/index.html">Contes rapides</a></p>
+<p class='e'><a href="../000548/index.html">Henriette</a></p>
+<p class='e'><a href="../000558/index.html">Toute une jeunesse</a></p>
+<p class='e'><a href="../000549/index.html">Les vrais riches</a></p>
+<p class='e'><a href="../000547/index.html">Longues et brèves</a></p>
+<p class='e'><a href="../000560/index.html">Mon franc parler</a></p>
+<p class='e'><a href="../000555/index.html">Le coupable</a></p>
+<p class='e'><a href="../000556/index.html">Paris</a></p>
+<p class='e'><a href="../000561/index.html">La bonne souffrance</a></p>
+<p class='e'><a href="../000562/index.html">Contes pour les jours de fête</a></p>
+<p class='e'><a href="../000554/index.html">Le devoir des jeunes</a></p>
+<p class='e'><a href="../000557/index.html">La liberté de l’enseignement</a></p>
 
 <h3>Théâtre</h3>
 
-<p><a href="../000590/index.html">Le passant</a></p>
-<p><a href="../000591/index.html">Deux douleurs</a></p>
+<p class='e'><a href="../000590/index.html">Le passant</a></p>
+<p class='e'><a href="../000591/index.html">Deux douleurs</a></p>
+<p class='e'><a href="../000592/index.html">Fais ce que dois</a></p>
 
 </body>
 </html>
