Coppée — Les bijoux de la délivrance

--- a/livres.publies/coppee/oeuvres_completes/index.html
+++ b/livres.publies/coppee/oeuvres_completes/index.html
@@ -93,6 +93,7 @@
 <p class='e'><a href="../000591/index.html">Deux douleurs</a></p>
 <p class='e'><a href="../000592/index.html">Fais ce que dois</a></p>
 <p class='e'><a href="../000593/index.html">L’abandonnée</a></p>
+<p class='e'><a href="../000594/index.html">Les bijoux de la délivrance</a></p>
 
 </body>
 </html>
