--- a/livres.publies/samain/oeuvres/index.html
+++ b/livres.publies/samain/oeuvres/index.html
@@ -33,8 +33,6 @@
 <td><p style="font-size:1.2em; padding:0; margin:0;"><i>Albert Samain</i></p><p style="font-size:1.5em; padding:1em 0 1em 0; margin:0;">Œuvres de Albert Samain</p><p style="padding:0; margin:0;">Mercure de France, Paris, 1924</p></td>
 </tr></table>
 
-<p>Cette réimpression est en cours de réalisation.</p>
-
 <p>Archive de tous les volumes :
     <a href="samain_epub.zip">epub</a> 
     <a href="samain_mobi.zip">kindle</a>
@@ -48,6 +46,7 @@
 <p><a href='../000589/index.html'>Symphonie héroïque</a></p>
 <p><a href='../000567/index.html'>Aux flancs de vase</a></p>
 <p><a href='../000568/index.html'>Contes</a></p>
+<p><a href='../000595/index.html'>Polyphème</a></p>
 <p><a href='../000587/index.html'>Poèmes inachevés</a></p>
 
 </body>
