Régnier — Le miroir des heures

--- a/livres.publies/regnier/oeuvres/index.html
+++ b/livres.publies/regnier/oeuvres/index.html
@@ -78,6 +78,14 @@
   </tr>
 
   <tr style="vertical-align:top;">
+    <td colspan="2"><a href="../000596/index.html">Le miroir des heures</a></td>
+  </tr>
+  <tr>
+    <td/>
+    <td>Poésies — En marge de Shakespeare — Le miroir des amants — Sept estampes amoureuses — Le médaillier — Don Juan au tombeau</td>
+  </tr>
+
+  <tr style="vertical-align:top;">
     <td colspan="2"><a href="../000454/index.html">1914-1916</a></td>
   </tr>
 
